--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,7 +1,8 @@
 {
     "menu": {
-      "item1": "表一",
-      "item2": "表二",
-      "item3": "表三"
+      "item1": "設計案例",
+      "item2": "關於我",
+      "item3": "文章",
+      "item4": "其他"
     }
   }
