--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,7 @@
       "item1": "Works",
       "item2": "About Me",
       "item3": "Blog",
-      "item4": "Others"
+      "item4": "Others",
+      "item5": "Resume"
     }
   }
