--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -3,6 +3,7 @@
       "item1": "設計案例",
       "item2": "關於我",
       "item3": "文章",
-      "item4": "其他"
+      "item4": "其他",
+      "item5": "下載履歷"
     }
   }
