--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -5,5 +5,12 @@
       "item3": "文章",
       "item4": "其他",
       "item5": "下載履歷"
+    },
+    "hero": {
+      "item1": "哈囉！我是 Simon 👋",
+      "item2": "我是一位",
+      "item3": "設計師",
+      "item4": "產品人",
+      "item5": "研究員"
     }
   }
