--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -11,6 +11,9 @@
       "item2": "我是一位",
       "item3": "設計師",
       "item4": "產品人",
-      "item5": "研究員"
+      "item5": "研究員",
+      "item6": "產品設計師",
+      "item7": "商業價值",
+      "item8": "工作經歷：7 年"
     }
   }
