feat: hero section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,8 @@
       "item5": "Researcher",
       "item6": "Product Designer",
       "item7": "Business Value",
-      "item8": "Experience: 7 years"
+      "item8": "Experience: 7 years",
+      "item9": "Personality",
+      "item10": "Creativity, Positivity, Curiosity"
     }
   }
