--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -14,6 +14,8 @@
       "item5": "研究員",
       "item6": "產品設計師",
       "item7": "商業價值",
-      "item8": "工作經歷：7 年"
+      "item8": "工作經歷：7 年",
+      "item9": "個人特質",
+      "item10": "創意、耐心、積極、好奇心、抗壓"
     }
   }
