feat: navbar dark

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,8 @@
       "item6": "Product Designer",
       "item7": "Business Value",
       "item8": "Experience: 7 years",
-      "item9": "Personality",
-      "item10": "Creativity, Positivity, Curiosity"
+      "item9": "RESUME",
+      "item10": "Personality",
+      "item11": "Creativity, Positivity, Curiosity"
     }
   }
