--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -18,5 +18,13 @@
       "item9": "線上履歷",
       "item10": "個人特質",
       "item11": "創意、耐心、積極、好奇心、抗壓"
+    },
+    "work": {
+      "item1": "專案項目",
+      "item2": "了解專案細節",
+      "project1": {
+        "title": "海外醫事人員培訓平台",
+        "desc": "提供世界各地醫護人員來台培訓課程"
+      }
     }
   }
