--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -25,6 +25,14 @@
       "project1": {
         "title": "海外醫事人員培訓平台",
         "desc": "提供世界各地醫護人員來台培訓課程"
+      },
+      "project2": {
+        "title": "嘉義市城市備援",
+        "desc": "嘉義市政府資源整合平台"
+      },
+      "project13": {
+        "title": "海外醫事人員培訓平台",
+        "desc": "提供世界各地醫護人員來台培訓課程"
       }
     }
   }
