--- a/src/locales/en/work.json
+++ b/src/locales/en/work.json
@@ -2,5 +2,6 @@
     "item1": "WORKS",
     "item2": "View Project",
     "item3": "UI/UX",
-    "item4": "Coding"
+    "item4": "Coding",
+    "item5": "View Site"
 }
