--- a/src/locales/en/project2.json
+++ b/src/locales/en/project2.json
@@ -1,4 +1,7 @@
 {
-    "title": "Chiayi City Resource Platform",
-    "desc": "Display Chiayi City Government resources and information"
+    "core":{
+        "title": "Chiayi City Resource Platform",
+        "desc": "Display Chiayi City Government resources and information"
+    }
+    
 }
