--- a/src/locales/en/project3.json
+++ b/src/locales/en/project3.json
@@ -1,4 +1,7 @@
 {
-    "title": "Locus Cell",
-    "desc": "Display Chiayi City Government resources and information"
+    "core":{
+        "title": "Locus Cell",
+        "desc": "Display Chiayi City Government resources and information"
+    }
+    
 }
