--- a/src/locales/zh/project4.json
+++ b/src/locales/zh/project4.json
@@ -1,4 +1,7 @@
 {
-    "title": "電子商務",
-    "desc": "嘉義市政府資源整合平台"
+    "core":{
+        "title": "電子商務",
+        "desc": "嘉義市政府資源整合平台"
+    }
+    
 }
