--- a/src/locales/zh/project2.json
+++ b/src/locales/zh/project2.json
@@ -1,4 +1,7 @@
 {
-    "title": "嘉義市城市備援平台",
-    "desc": "嘉義市政府資源整合平台"
+    "core":{
+        "title": "嘉義市城市備援平台",
+        "desc": "嘉義市政府資源整合平台"
+    }
+    
 }
