--- a/src/locales/zh/project3.json
+++ b/src/locales/zh/project3.json
@@ -1,4 +1,7 @@
 {
-    "title": "樂迦官網",
-    "desc": "嘉義市政府資源整合平台"
+    "core":{
+        "title": "樂迦官網",
+        "desc": "嘉義市政府資源整合平台"
+    }
+    
 }
