feat: work sectionBrief

--- a/src/locales/en/project1.json
+++ b/src/locales/en/project1.json
@@ -3,16 +3,18 @@
         "title": "Health Academy",
         "desc": "Taiwan International Medical Education"
     },
-    "info":{
-        "title": "Health Academy",
-        "desc": "Taiwan International Medical Education"
+    "infoContent":{
+        "item1": "XX Company",
+        "item2": "Business Website",
+        "item3": "UI / UX",
+        "item4": "Coding",
+        "item5": "Front-end engineer"
     },
-    "brief":{
-        "item1": "Service Client",
-        "item2": "Demand Services",
-        "item3": "Role",
-        "item4": "Team",
-        "item5": "View Site"
+    "briefCard":{
+        "item1": "The team wanted to redesign the existing search experience on Indeed for Japanese job seekers. Also, we wanted to refactor our infrastructure for the future scale.",
+        "item2": "Role & Deliverables",
+        "item3": "Challenges",
+        "item4": "Outcome & Impact"
     }
     
 }
