--- a/src/locales/en/work.json
+++ b/src/locales/en/work.json
@@ -10,9 +10,8 @@
         "item1": "Info",
         "item2": "Overview",
         "item3": "Background",
-        "item4": "Role",
-        "item5": "Team",
-        "item6": "View Site"
+        "item4": "Design System"
+        
     },
     "info":{
         "item1": "Duration",
@@ -31,5 +30,14 @@
         "item2": "Role & Deliverables",
         "item3": "Challenges",
         "item4": "Outcome & Impact"
+    },
+    "designSystem":{
+        "item1": "Colours",
+        "item2": "Typography",
+        "item3": "Icons",
+        "item4": "Spacing",
+        "item5": "Components",
+        "item6": "Illustrations",
+        "item7": "Logo"
     }
 }
