--- a/src/locales/zh/work.json
+++ b/src/locales/zh/work.json
@@ -8,9 +8,7 @@
         "item1": "專案資訊",
         "item2": "專案概覽",
         "item3": "專案背景",
-        "item4": "Role",
-        "item5": "Team",
-        "item6": "View Site"
+        "item4": "設計系統"
     },
     "info":{
         "item1": "專案期間",
@@ -29,5 +27,14 @@
         "item2": "角色與產出",
         "item3": "專案挑戰",
         "item4": "專案成果與影響"
+    },
+    "designSystem":{
+        "item1": "顏色",
+        "item2": "字型",
+        "item3": "Icons",
+        "item4": "間距",
+        "item5": "元件",
+        "item6": "插畫",
+        "item7": "Logo"
     }
 }
