--- a/src/locales/zh/about.json
+++ b/src/locales/zh/about.json
@@ -14,5 +14,18 @@
         "V1": "Coding",
         "V2": "View Site",
         "V3": "View Site"
+    },
+    "skill":{
+        "T1": "我擅長的技能",
+        "S1": "互動/動態設計",
+        "S2": "資訊架構",
+        "S3": "設計系統"
+    },
+    "language":{
+        "T1": "語言能力",
+        "S1": "中文(繁體)",
+        "S2": "英文",
+        "L1": "母語者",
+        "L2": "能流利的在工作中使用"
     }
 }
