--- a/src/locales/zh/about.json
+++ b/src/locales/zh/about.json
@@ -23,9 +23,36 @@
     },
     "language":{
         "T1": "語言能力",
-        "S1": "中文(繁體)",
-        "S2": "英文",
+        "S1": "🇹🇼 中文(繁體)",
+        "S2": "🇺🇸 英文",
         "L1": "母語者",
         "L2": "能流利的在工作中使用"
+    },
+    "Education":{
+        "T1": "教育經歷",
+        "S1": "淡江大學",
+        "L1": "企業管理學系 - 碩士",
+        "L2": "論文：《第三方支付對跨境電商購買意願之研究》"
+    },
+    "certificate":{
+        "T1": "自我學習",
+        "S1": "TUniversity",
+        "S2": "TUniversity",
+        "S3": "TUniversity",
+        "S4": "TUniversity",
+        "S5": "TUniversity",
+        "S6": "TUniversity",
+        "L1": "Native Speaker",
+        "L2": "Native Speaker",
+        "L3": "Native Speaker",
+        "L4": "Native Speaker",
+        "L5": "Native Speaker",
+        "L6": "Native Speaker"
+    },
+    "tool":{
+        "T1": "軟體工具"
+    },
+    "work":{
+        "T1": "工作經驗"
     }
 }
