--- a/src/locales/zh/core/blog.json
+++ b/src/locales/zh/core/blog.json
@@ -1,6 +1,6 @@
 {
-    "item1": "🍯\u00A0\u00A0所有項目",
-    "item2": "🥯\u00A0\u00A0插畫設計",
-    "item3": "🧇\u00A0\u00A0平面設計",
-    "item4": "🌕\u00A0\u00A03D 建模"
+    "item1": "🍯\u00A0\u00A0所有文章",
+    "item2": "🥯\u00A0\u00A0美感養成",
+    "item3": "🧇\u00A0\u00A0職場生活",
+    "item4": "🌕\u00A0\u00A0產品服務"
 }
