--- a/src/locales/zh/core/nav.json
+++ b/src/locales/zh/core/nav.json
@@ -1,7 +1,8 @@
 {
-    "item1": "設計案例",
-    "item2": "關於我",
-    "item3": "文章",
+    "item1": "首頁",
+    "item2": "設計案例",
+    "item3": "部落格",
     "item4": "其他",
-    "item5": "下載履歷"
+    "item5": "關於我",
+    "item6": "下載履歷"
 }
